Corrections alignement logo header

--- a/theme/src/scss/blocks/_headline.scss
+++ b/theme/src/scss/blocks/_headline.scss
@@ -14,8 +14,10 @@
   &.variant-offset-icon {
     --gutter-headline: var(--space-2xs-xs);
     display: flex;
+    align-items: baseline;
     gap: var(--gutter-headline);
     margin-left: calc(var(--offset-icon-space) * -1);
+    // transform: translateY(var(--offset-icon-space));
 
     & span {
       flex: 1;
@@ -49,7 +51,8 @@
 
 .headline_icon {
   --icon-size: calc(var(--offset-icon-space) - var(--gutter-headline));
-  margin-top: -0.15em;
+  // margin-top: -0.15em;
+  transform: translateY(0.125em);
 }
 
 .headline_desc {
